Align docker build process with jenkins

--- a/.travis.yaml
+++ b/.travis.yaml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-  - export REPO=rhmap/nagios
+  - export REPO=docker.io/rhmap/nagios
   - export VERSION=4.0.8
   - export BUILD=2
   - docker build -f Dockerfile -t "$REPO:$VERSION-$BUILD" .
@@ -14,5 +14,8 @@ before_install:
 after_success:
   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
   - export TAG=latest
-  - docker tag "$REPO:$VERSION-$BUILD" $REPO:$TAG
-  - docker push $REPO
+  - docker tag -f "$REPO:$VERSION-$BUILD" $REPO:$TAG
+  - docker push -f "$REPO:$VERSION-$BUILD"
+  - docker push -f $REPO:$TAG
+  - docker rmi "$REPO:$VERSION-$BUILD"
+  - docker rmi $REPO:$TAG
