Updating Nagios docker image to rhmap4/nagios:4.0.8-6
Motivation:
For productisation the version of Nagios should use a docker registry
named rhmap4 and the version should be 4.0.8-6.

Modifications:
Updated the default values for NAGIOS_IMAGE_NAME and
NAGIOS_IMAGE_VERSION to correspond with the productisation values.

Result:
Processing the template using oc will produce the correct docker image
version:

oc process -f \
nagios.yml \
-v SMTP_SERVER=localhost,\
SMTP_USERNAME=username,\
SMTP_PASSWORD=password,\
SMTP_TLS=auto,\
SMTP_FROM_ADDRESS=admin@example.com,\
MBAAS_ADMIN_EMAIL=root@localhost,\
NAGIOS_USER=nagiosadmin,\
MBAAS_ROUTER_DNS=$(oc get route mbaas -o template --template
{{.spec.host}}),\
NAGIOS_HOST=$(printf "nagios-%s" `oc get route mbaas -o template
--template {{.spec.host}}`)

...
 "image": "rhmap4/nagios:4.0.8-6",
...

JIRA:
https://issues.jboss.org/browse/RHMAP-5608

--- a/nagios.yml
+++ b/nagios.yml
@@ -145,8 +145,8 @@ parameters:
 -
   description: "The name of the Nagios Docker image"
   name: "NAGIOS_IMAGE_NAME"
-  value: "docker.io/rhmap/nagios"
+  value: "rhmap4/nagios"
 -
   description: "The version of the Nagios Docker image"
   name: "NAGIOS_IMAGE_VERSION"
-  value: "4.0.8-2"
+  value: "4.0.8-6"
